# implink

./: .gitignore  README.md  implink-mapping.json  pyproject.toml
implink/: __main__.py  module.py
